fixed header opening on mobiles

--- a/style/header-style.css
+++ b/style/header-style.css
@@ -109,6 +109,7 @@ header nav a.selected {
     header .nav-header {
         display: flex;
         justify-content: space-between;
+        cursor: pointer;
     }
 
     header nav {
